--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dev_dependencies:
   barcode_scan: ^3.0.1
   url_launcher: ^5.4.11
   fluttertoast: ^4.0.1
+  shared_preferences: ^0.5.7+3
+  material_design_icons_flutter: ^4.0.5045
 
 
 # For information on the generic Dart part of this file, see the
@@ -44,7 +46,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
